--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,7 @@
-group 'com.whelksoft.flutter_native_timezone'
-version '1.0-SNAPSHOT'
+group 'io.flutter.plugins.timezone'
+version '1.0'
 
 buildscript {
-    ext.kotlin_version = '1.7.10'
     repositories {
         google()
         mavenCentral()
@@ -21,38 +20,30 @@ rootProject.allprojects {
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 android {
-    namespace 'com.whelksoft.flutter_native_timezone'
-    compileSdkVersion 35
-
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
+    // Update these versions
+    compileSdkVersion 33
+    
     defaultConfig {
-        targetSdkVersion 35
-        minSdkVersion 23
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion 16
+        targetSdkVersion 33
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    lintOptions {
-        disable 'InvalidPackage'
-    }
+    
     compileOptions {
-        // Either set these to 1.8 (Java 8) or 17, just make them match.
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+
+    // Add namespace to prevent resource conflicts
+    namespace 'io.flutter.plugins.timezone'
+    
+    lintOptions {
+        disable 'InvalidPackage'
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    implementation 'androidx.annotation:annotation:1.5.0'
 }
